--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Curso de HTML5 + CSS</title>
-   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico|Roboto+Slab" rel="stylesheet">
+    <title>Oitowebs .:: Soluções em tecnologia</title>
+   <link href="https://fonts.googleapis.com/css?family=POpen+Sans|Roboto+Slab|Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/estilos.css" 
   </head>
   <body>
 
     <nav>
-      <a href="#">LOREN IPSUM</a>
+      <a href="#">Oitowebs</a>
       <ul>
         <li><a href="#sobre">SOBRE</a></li>
         <li><a href="#servicos">SERVIÇOS</a></li>
@@ -17,43 +17,48 @@
         <li><a href="#contato">CONTATO</a></li>
     </nav>
       <header>
-        <h1>LOREN IPSUM</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a href="#">VER MAIS</a>
+        <h1</h1>
+        <p>Soluções em tecnologia para você e seu negócio.</p>
+        <a href="#" class="botao">VER MAIS</a>
       </header>
 
       <section id="sobre">
-        <h2>SOBRE</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a href="#">ENTRE EM CONTATO</a>
+        <h2>SOBRE MIM</h2>
+        <p>Meu nome é Fagner Guimarães, tenho 28 anos, formado em analise e desenvolvimento de sistemas, atuo no Rio de Janeiro como Webdesigner autonomo.</p>
+        <a href="#contato" class="botao">ENTRE EM CONTATO</a>
       </section>
 
       <section id="servicos">
         <h2>SERVIÇOS</h2>
         <div>
-          <img src="img/configs.png" alt="Fonfigurações">
-          <h3>Facil Integração</h3>
-          <p>Integra facilmente seu site em qualquer gerenciador de conteúdo.</p>
+          <img src="img/configs.png" alt="Desenvolvimento">
+          <h3>Desenvolvimento de sites</h3>
+          <p>Foco em novos empreendedores, pequenas e medias empresas</p>
         </div>
         <div>
-          <img src="img/host.png" alt="Hospedagem">
-          <h3>Hospedagem moderna</h3>
-          <p>Site 24h no ar.</p>
+          <img src="img/host.png" alt="Manutenção">
+          <h3>Manutenção de sites</h3>
+          <p>Atualizações constantes e medidas preventivas para manter seu site seguro e sempre com novidades, atraindo novos visitantes</p>
         </div>
         <div>
-          <img src="img/site.png" alt="Eficácia">
-          <h3>Melhores Práticas</h3>
-          <p>Codigo legível, desenvolvido com boas praticas.</p>
+          <img src="img/site.png" alt="Blogs">
+          <h3>Criação de blogs</h3>
+          <p>Sua empresa na web. Solução barata para divulgação do seu serviço.</p>
         </div>
         <div>
-          <img src="img/coracao.png" alt="Amor">
-          <h3>Feito com amor</h3>
-          <p>É melhor fazer seus sites com amor.</p>
+          <img src="img/site.png" alt="Mobile">
+          <h3>Sites responsivos</h3>
+          <p>Arquitetura de sites funcionais em qualquer dispositivo, como: tablets, smartphones, dentre outros.</p>
+        </div>
+        <div>
+          <img src="img/coracao.png" alt="Otimização">
+          <h3>Otimização</h3>
+          <p>Sites produzidos com boas praticas de programação em sua estrutura; amigaveis aos melhores buscadores da internet.</p>
         </div>
       </section>
 
       <section id="portfolio">
-        
+        <h2>Portifólio</h2>
           <img src="img/portfolio-1.jpg" alt="">
           <img src="img/portfolio-2.jpeg" alt="">
           <img src="img/portfolio-3.jpeg" alt="">
@@ -68,11 +73,11 @@
         <p>Entre em contato conosco.</p>
         <div>
           <img src="img/fone.png" alt="Telefone">
-          <p><a href="tel:2199999999"> (21) 9999-9999</a></p>
+          <p><a href="tel:21995862846"> (21) 995862846</a></p>
         </div>
         <div>
           <img src="img/contato.png" alt="email">
-          <p><a href="malito:contato@email.com">contato@email.com</a></p>
+          <p><a href="malito:fagner.guimaraes@hotmail.com">fagner.guimaraes@hotmail.com</a></p>
         </div>
       </section>
       <footer>
